--- a/Artifacts/BD_Property_listing.ipynb
+++ b/Artifacts/BD_Property_listing.ipynb
@@ -2589,7 +2589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "1f902034",
    "metadata": {},
    "outputs": [
@@ -2720,7 +2720,7 @@
        "4  25000.0        1650  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2733,7 +2733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "90586b1f",
    "metadata": {},
    "outputs": [
@@ -2864,7 +2864,7 @@
        "4  25000.0        1650  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2876,7 +2876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "ec381471",
    "metadata": {},
    "outputs": [
@@ -2886,7 +2886,7 @@
        "array([ 4,  3,  5,  2,  1,  6, 10,  8,  7], dtype=int64)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2897,7 +2897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "6b83aced",
    "metadata": {},
    "outputs": [
@@ -3076,7 +3076,7 @@
        "7118  1000000.0       15000  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3087,7 +3087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "7af66456",
    "metadata": {
     "scrolled": true
@@ -3152,7 +3152,7 @@
        "        1888], dtype=int64)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3163,7 +3163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "7f53f621",
    "metadata": {
     "scrolled": true
@@ -3268,7 +3268,7 @@
        "2  30000.0        1950       15.384615  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3281,7 +3281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "0d7f70ca",
    "metadata": {},
    "outputs": [
@@ -3375,7 +3375,7 @@
        "2  30000.0        1950       15.384615  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3387,7 +3387,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 87,
+   "id": "93f6cae5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original rows: 7557 | After removing outliers: 7359\n"
+     ]
+    }
+   ],
+   "source": [
+    "df4 = df3.drop(['flooPlan','lastUpdated'],axis = 1)\n",
+    "from scipy.stats import zscore\n",
+    "columns_to_check = ['beds', 'bath', 'price', 'size(sqft)', 'price_per_sqft']\n",
+    "\n",
+    "# Apply Z-score method\n",
+    "z_scores = df4[columns_to_check].apply(zscore)\n",
+    "df4_no_outliers = df4[(z_scores < 3).all(axis=1)]\n",
+    "\n",
+    "print(f\"Original rows: {len(df4)} | After removing outliers: {len(df4_no_outliers)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "aaceaa56",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original rows: 7557 | After removing outliers: 6605\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate Q1 (25th percentile) and Q3 (75th percentile)\n",
+    "Q1 = df4[columns_to_check].quantile(0.25)\n",
+    "Q3 = df4[columns_to_check].quantile(0.75)\n",
+    "\n",
+    "# Calculate IQR\n",
+    "IQR = Q3 - Q1\n",
+    "\n",
+    "# Define outlier threshold\n",
+    "lower_bound = Q1 - 1.5 * IQR\n",
+    "upper_bound = Q3 + 1.5 * IQR\n",
+    "\n",
+    "# Filter out the outliers\n",
+    "df4_no_outliers = df4[~((df4[columns_to_check] < lower_bound) | (df4[columns_to_check] > upper_bound)).any(axis=1)]\n",
+    "\n",
+    "# Print the number of rows removed\n",
+    "print(f\"Original rows: {len(df4)} | After removing outliers: {len(df4_no_outliers)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
    "id": "b28082cd",
    "metadata": {},
    "outputs": [],
@@ -3407,18 +3466,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 111,
    "id": "2ce47651",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = df3.drop(['price','flooPlan','lastUpdated'],axis = 1)\n",
-    "y = df3['price']"
+    "#X = df3.drop(['price','flooPlan','lastUpdated'],axis = 1)\n",
+    "#y = df3['price']\n",
+    "X = df4.drop('price',axis = 1)\n",
+    "y = df4['price']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 112,
    "id": "1360453f",
    "metadata": {},
    "outputs": [
@@ -3495,7 +3556,7 @@
        "2       15.384615  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3517,7 +3578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 113,
    "id": "92a834fb",
    "metadata": {},
    "outputs": [
@@ -3583,7 +3644,7 @@
        "1       21.428571  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3595,7 +3656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 114,
    "id": "5fb2acaa",
    "metadata": {},
    "outputs": [],
@@ -3614,7 +3675,7 @@
     "    )),\n",
     "    \n",
     "    # Optional scaler (useful for linear models)\n",
-    "    ('scaler', StandardScaler()),\n",
+    "    ('scaler', StandardScaler(with_mean=False)),\n",
     "    \n",
     "    # Regressor (placeholder to be replaced during grid search)\n",
     "    ('regressor', LinearRegression())\n",
@@ -3623,7 +3684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 115,
    "id": "693c07d8",
    "metadata": {},
    "outputs": [],
@@ -3682,7 +3743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 116,
    "id": "ca17d8e6",
    "metadata": {},
    "outputs": [
@@ -3693,7 +3754,7 @@
       "Fitting 5 folds for each of 57 candidates, totalling 285 fits\n",
       "Best Model: GradientBoostingRegressor()\n",
       "Best Parameters: {'regressor': GradientBoostingRegressor(), 'regressor__learning_rate': 0.1, 'regressor__n_estimators': 100, 'scaler': None, 'target_encode__smoothing': 1.0}\n",
-      "Best RMSE: 16776.08037375925\n"
+      "Best RMSE: 17078.363968394013\n"
      ]
     }
    ],
@@ -3726,7 +3787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 122,
    "id": "491f5550",
    "metadata": {},
    "outputs": [],
@@ -3738,7 +3799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 123,
    "id": "d51c5085",
    "metadata": {},
    "outputs": [
@@ -3837,7 +3898,7 @@
        "3332  Apartment         800       15.000000  "
       ]
      },
-     "execution_count": 90,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3848,7 +3909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 124,
    "id": "07dd2a2c",
    "metadata": {},
    "outputs": [
@@ -3856,9 +3917,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R² (Explained Variance): 94.69%\n",
+      "R² (Explained Variance): 94.97%\n",
       "MAPE (Error Percentage): 3.76%\n",
-      "RMSE: 18276.81\n"
+      "RMSE: 51.67\n"
      ]
     }
    ],
@@ -3878,15 +3939,16 @@
     "r2 = r2_score(y_test, y_pred)\n",
     "mape = mean_absolute_percentage_error(y_test, y_pred)\n",
     "rmse = np.sqrt(mean_squared_error(y_test, y_pred))\n",
+    "rmse_percentage = (rmse / np.mean(y_test)) * 100\n",
     "\n",
     "print(f\"R² (Explained Variance): {r2 * 100:.2f}%\")\n",
     "print(f\"MAPE (Error Percentage): {mape:.2f}%\")\n",
-    "print(f\"RMSE: {rmse:.2f}\")"
+    "print(f\"RMSE: {rmse_percentage:.2f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 125,
    "id": "00dc45ca",
    "metadata": {},
    "outputs": [
@@ -3898,7 +3960,7 @@
        "       16177.3809869 , 24566.1874151 ])"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3910,7 +3972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 126,
    "id": "55903e7b",
    "metadata": {},
    "outputs": [
@@ -3930,7 +3992,7 @@
        "Name: price, dtype: float64"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3941,7 +4003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 127,
    "id": "c36c496c",
    "metadata": {},
    "outputs": [
@@ -3972,7 +4034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 128,
    "id": "9153182b",
    "metadata": {},
    "outputs": [
@@ -3982,7 +4044,7 @@
        "array([775628.71962247])"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3993,7 +4055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 129,
    "id": "2cddf446",
    "metadata": {},
    "outputs": [
@@ -4024,6 +4086,58 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0aa1013e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b69f28e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02699c9a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34eedecc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c613e937",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a14288b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "764d6839",
    "metadata": {},
    "outputs": [],
    "source": []
